# ExtendedNN

./: .gitignore  CMakeLists.txt  ExtendedNn.h  ExtendedNnReLU.h  ExtendedNnTanh.h  api.jl  build.jl  build.sh  custom_op.txt  formula.txt  gradtest.jl
