add_library(ExtendedNn SHARED ExtendedNn.cpp)
set_property(TARGET ExtendedNn PROPERTY POSITION_INDEPENDENT_CODE ON)
target_link_libraries(ExtendedNn ${TF_LIB_FILE} adept)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
set_target_properties(ExtendedNn PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
