add_library(ExtendedNn SHARED ExtendedNn.cpp)
set_property(TARGET ExtendedNn PROPERTY POSITION_INDEPENDENT_CODE ON)
include_directories(${LIBDIR}/Adept-2/include)
link_directories(${LIBDIR}/Adept-2/adept/.libs)
target_link_libraries(ExtendedNn ${TF_LIB_FILE} {ADEPT_LIB_FILE})
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
set_target_properties(ExtendedNn PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
